--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul id="nav-links">
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#container-cartilha">Cartilha</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#feedbackForm">Contato</a></li>
                 </ul>
             </div> 
         </nav>
